# Wander-RAG

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
scripts/: ingest_documents.py  run_polling.py
scripts/deploy/: generate-env.sh
src/: main.py
src/ai/llm/: base.py  gemini_provider.py
src/ai/rag/: pipeline.py  prompts.py  reranker.py  retriever.py
src/channels/: base.py
src/channels/telegram/: adapter.py  webhook.py
src/config/: settings.py
src/core/: conversation.py  models.py  orchestrator.py
src/infra/: conversation_store.py  database.py  logging.py
src/knowledge/ingestion/: bootstrap.py  chunker.py  loaders.py  markdown_cleaner.py  pipeline.py
src/knowledge/vectorstore/: base.py  qdrant_store.py
tests/unit/: test_bootstrap.py  test_chunker.py  test_conversation.py  test_gemini_provider.py  test_ingestion_pipeline.py  test_loaders.py  test_models.py  test_orchestrator.py  test_prompts.py  test_rag_pipeline.py  test_retriever.py  test_settings.py  test_telegram_adapter.py  test_webhook.py
